--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     ]
   },
   "devDependencies": {
+    "@material-ui/core": "^4.9.1",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
