--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.26",
+    "@types/react-infinite-scroller": "^1.2.1",
     "react": "^16.12.0",
-    "typescript": "^3.7.5"
+    "react-infinite-scroller": "^1.2.4",
+    "typescript": "^3.7.5",
+    "typescript-require": "^0.2.10"
   },
   "scripts": {
     "start": "react-scripts start",
