--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.26",
     "@types/react-infinite-scroller": "^1.2.1",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-infinite-scroller": "^1.2.4",
     "typescript": "^3.7.5",
