--- a/package.json
+++ b/package.json
@@ -4,17 +4,26 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "2gis-maps": "^3.5.15",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/google-map-react": "^1.1.4",
     "@types/jest": "^24.9.1",
+    "@types/jquery": "^3.3.32",
+    "@types/mapbox-gl": "^1.7.0",
     "@types/node": "^12.12.26",
     "@types/react-infinite-scroller": "^1.2.1",
+    "@types/react-map-gl": "^5.1.1",
+    "google-map-react": "^1.1.6",
+    "mapbox-gl": "^1.7.0",
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-infinite-scroller": "^1.2.4",
+    "react-map-gl": "^5.2.3",
+    "react-mapbox-gl": "^4.8.2",
     "typescript": "^3.7.5",
     "typescript-require": "^0.2.10"
   },
