--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-typescript": "^7.8.3",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
     "@types/jquery": "^3.3.32",
     "@types/mapbox-gl": "^1.7.0",
     "@types/node": "^12.12.26",
@@ -24,10 +26,22 @@
     "typescript": "^3.7.5",
     "typescript-require": "^0.2.10"
   },
+  "transform": {
+    "^.+\\.tsx?$": "ts-jest"
+  },
+  "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+  "moduleFileExtensions": [
+    "ts",
+    "tsx",
+    "js",
+    "jsx",
+    "json",
+    "node"
+  ],
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "jest --notify",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -47,6 +61,7 @@
   },
   "devDependencies": {
     "@material-ui/core": "^4.9.1",
+    "@types/jest": "^24.9.1",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
@@ -56,6 +71,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "ts-jest": "^25.2.0"
   }
 }
