--- a/package.json
+++ b/package.json
@@ -4,27 +4,17 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/preset-typescript": "^7.8.3",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
     "@types/jquery": "^3.3.32",
     "@types/mapbox-gl": "^1.7.0",
-    "@types/node": "^12.12.26",
     "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-map-gl": "^5.1.1",
     "mapbox-gl": "^1.7.0",
-    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-infinite-scroller": "^1.2.4",
     "react-map-gl": "^5.2.3",
-    "react-mapbox-gl": "^4.8.2",
-    "typescript": "^3.7.5",
-    "typescript-require": "^0.2.10"
+    "react-mapbox-gl": "^4.8.2"
   },
   "transform": {
     "^.+\\.tsx?$": "ts-jest"
@@ -60,6 +50,16 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-typescript": "^7.8.3",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.4.0",
+    "@testing-library/user-event": "^7.2.1",
+    "@types/node": "^12.12.26",
+    "typescript": "^3.7.5",
+    "typescript-require": "^0.2.10",
+    "moment": "^2.24.0",
     "@material-ui/core": "^4.9.1",
     "@types/jest": "^24.9.1",
     "@types/react": "^16.9.19",
