--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "news-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://aesarantsev.github.io/React-Redux-NewsApp/",
   "dependencies": {
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
@@ -32,7 +32,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest --notify",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -53,25 +55,27 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-typescript": "^7.8.3",
+    "@material-ui/core": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "@types/node": "^12.12.26",
-    "typescript": "^3.7.5",
-    "typescript-require": "^0.2.10",
-    "moment": "^2.24.0",
-    "@material-ui/core": "^4.9.1",
     "@types/jest": "^24.9.1",
+    "@types/node": "^12.12.26",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/redux": "^3.6.0",
+    "gh-pages": "^2.2.0",
+    "moment": "^2.24.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.1",
+    "react-test-renderer": "^16.12.0",
     "redux": "^4.0.5",
-    "ts-jest": "^25.2.0"
+    "ts-jest": "^25.2.0",
+    "typescript": "^3.7.5",
+    "typescript-require": "^0.2.10"
   }
 }
