--- a/package.json
+++ b/package.json
@@ -16,22 +16,25 @@
     "react-map-gl": "^5.2.3",
     "react-mapbox-gl": "^4.8.2"
   },
-  "transform": {
-    "^.+\\.tsx?$": "ts-jest"
+  "jest": {
+    "setupTestFrameworkScriptFile": "./setupTests.ts",
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   },
-  "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-  "moduleFileExtensions": [
-    "ts",
-    "tsx",
-    "js",
-    "jsx",
-    "json",
-    "node"
-  ],
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest --notify",
+    "test": "jest",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
@@ -59,14 +62,20 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.26",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-test-renderer": "^16.9.2",
     "@types/redux": "^3.6.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "gh-pages": "^2.2.0",
+    "jest": "^25.1.0",
     "moment": "^2.24.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
